# Scoreboard

./: CMakeLists.txt  LICENSE  PROJECT_CONTEXT.md  README.md
cmake/: xbyak_CMakeLists.txt
output/: Scoreboard.asi
src/: Plugin.cpp  PluginGUI.cpp  PluginRPC.cpp  PluginRender.cpp  main.cpp
